--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -1,3 +1,5 @@
+
+
 <form class="form" (submit)="add(taskTitle.value); taskTitle.value=''">
     <div class="form-group">
         <input #taskTitle class="form-control" placeholder="Task Name" />
@@ -8,6 +10,7 @@
 <table class="table">
     <tr *ngFor="let task of tasks">
         <td class="text-left ">
+          <!--<span class="badge">{{task._id}}</span>-->
             <a (click)="edit(task)">
                 <span *ngIf="task!==editTask">{{task.title}}</span>
                 <input *ngIf="task===editTask" [(ngModel)]="task.title" (blur)="update()" (keyup.enter)="update()">
