--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-md-6">
-            <h1 class="text-center">TODO List App</h1>
+            <h1 class="text-center">TODO List</h1>
             <app-tasks></app-tasks>
         </div>
     </div>
